--- a/build.gradle
+++ b/build.gradle
@@ -15,9 +15,19 @@ repositories {
     mavenCentral()
 }
 
+configurations.all {
+    resolutionStrategy {
+        force 'org.apache.logging.log4j:log4j-core:2.23.1'
+    }
+}
+
 dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-web'
     implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
     implementation 'com.h2database:h2'
+    // CVE-2024-38816 - Vulnerable Spring Framework version
+    implementation 'org.springframework:spring-web:6.1.8'
+    // CVE-2021-44228 - Transitive Log4Shell vulnerability via Elasticsearch
+    implementation 'org.elasticsearch.client:elasticsearch-rest-high-level-client:7.15.0'
 }
